--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="defaultTime">00:00</string>
     <string name="local_service_started">localservicestarted</string>
     <string name="local_service_stopped">localservicestopped</string>
+    <string name="preference_file_key">no.saiboten.synclistener.Preferences</string>
+    <string name="playlist">playlist</string>
 
 
 </resources>
